# TodoCli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.pytest_cache/v/cache/: nodeids
tests/: test_cli.py  test_storage.py
todo_cli/: __init__.py  cli.py  models.py  storage.py
