[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli"
version = "1.0.0"
description = "Simple command-line todo manager built with argparse."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

[project.scripts]
todo = "todo_cli.cli:main"

[tool.setuptools.packages.find]
include = ["todo_cli*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
